code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.5                                              | |
 |    Accounts           |  Reasoning effort: Medium                                            | |
 |    Agents             |        +------------------------------+                              | |
 |    Prompts            |  Mode S|Model Shortcuts               |                              | |
 |    Memories           |  Fast m|                              |t is available on supported m | |
 |    Skills             |  › Fast|• Esc    Return to overview   |                              | |
 |    Auto Drive         |    1M C|• Tab    Cycle sections       |                              | |
 |    Review             |  Unavai|• Shift+Tab  Cycle backwards  |ings apply automatically on s | |
 |    Planning           |        |• ?      Toggle this help     |                              | |
 |    Validation         |  ZEN5-C|                              |                              | |
 |    Chrome             |  Agenti|Press Esc to close            |                              | |
 |    MCP                |        +------------------------------+                              | |
 |    Notifications      |  ↑↓ Navigate  Enter Select  Esc Cancel                               | |
 |    Limits             |                                                                      | |
 |                       +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+


  What would you like to work on?

 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
