code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_truncates.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +Settings ▸ Overview-------------------------------------+
 |                                                        |
 | › Model              Model: GPT-5.5 (Medium)           |
 |   + Choose the language model used for new comp...     |
 |                                                        |
 |   Theme              Theme: Light - Photon (16-colo... |
 |   + Switch between preset color palettes and ad...     |
 |                                                        |
 |   Updates            Auto update: Disabled             |
 |   + Control CLI auto-update cadence and release...     |
 |                                                        |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help          |
 |                                                        |
 +--------------------------------------------------------+


  What would you like to work on?

 Read Only  (Shift+Tab change)   Ctrl+G editor  •  API key
