code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overview_hints_clean.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: ZEN5-Coder (Medium)                                                |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   Theme              Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset color palettes and adjust contrast.                                  |
 |                                                                                                |
 |   Updates            Auto update: Disabled                                                     |
 |   + Control CLI auto-update cadence and release channels.                                      |
 |                                                                                                |
 |                                                                                                |

 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+


  What would you like to work on?

 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
