code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__strict_stream_ids_missing_id_warning.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                  Hanzo Dev                                 |
 +----------------------------------------------------------------------------+


 » Missing stream id for assistant answer delta

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
